--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.App {
+  margin: 30px auto;
+}
+
+.App-header h1 {
+  text-align: center;
+}
+
 .App-footer {
   text-align: center;
   font-size: 12px;
