--- a/src/Phonetics.css
+++ b/src/Phonetics.css
@@ -3,18 +3,20 @@
 }
 
 .Phonetics a {
-  border: 1px solid #ddd;
+  border: 1px solid #4b5668;
   text-decoration: none;
-  padding: 8px 12px;
+  padding: 10px 16px;
   border-radius: 20px;
   transition: all 150ms ease-in-out;
   font-size: 14px;
   margin-right: 10px;
+  background-color: #4b5668;
+  color: #fff;
 }
 
 .Phonetics a:hover {
-  background-color: #4b5668;
-  color: #fff;
+  background-color: #fff;
+  color: #4b5668;
 }
 
 .Phonetics .text {
