--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -9,7 +9,7 @@
 }
 
 .Dictionary section {
-  background: white;
+  background: #fcfffe;
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0px 3px 2px rgba(186, 183, 183, 0.1);
