--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,38 @@
 body {
-  background: #cff1ee;
+	background: #f1f1f1;
+	font-family: 'Rubik', sans-serif;
+	color: #001163;
 }
 
 a {
-  color: #2f66fe;
-  text-decoration: none;
-  transition: all 200ms ease-in-out;
+	color: #001163;
+	text-decoration: none;
+	transition: all 200ms ease-in-out;
 }
 
 a:hover {
-  color: #002c2d;
+	color: #2f66fe;
 }
 
 .App {
-  margin: 50px auto;
-  max-width: 960px;
+	margin: 50px auto;
+	max-width: 960px;
 }
 
 .App-header h1 {
-  text-align: center;
+	text-align: center;
 }
 
 .App-header .logo {
-  max-width: 150px;
-  display: block;
-  margin: 0 auto;
+	max-width: 150px;
+	text-align: center;
+	font-size: 80px;
+	display: block;
+	margin: 0 auto;
 }
 
 .App-footer {
-  text-align: center;
-  font-size: 12px;
-  margin: 30px 0;
+	text-align: center;
+	font-size: 12px;
+	margin: 30px 0;
 }
