--- a/src/Results.css
+++ b/src/Results.css
@@ -1,6 +1,7 @@
 .Results h2 {
-  font-size: 36px;
-  font-weight: bold;
-  line-height: 1.5;
-  margin-bottom: 20px;
+	font-size: 36px;
+
+	font-style: italic;
+	line-height: 1.5;
+	margin-bottom: 20px;
 }
