--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -9,7 +9,7 @@
 }
 
 .Dictionary section {
-	background: #fcfffe;
+	background: #ffffff;
 	padding: 30px;
 	border-radius: 8px;
 	box-shadow: 0px 5px 5px rgba(75, 74, 74, 0.1);
